2012-04-20  Thomas Schwinge  <thomas@codesourcery.com>

	struct siginfo vs. siginfo_t

	Backport from trunk (but apply to gcc/):

	2012-04-20  Thomas Schwinge  <thomas@codesourcery.com>

	* config/alpha/linux-unwind.h (alpha_fallback_frame_state): Use
	siginfo_t instead of struct siginfo.
	* config/bfin/linux-unwind.h (bfin_fallback_frame_state): Likewise.
	* config/i386/linux-unwind.h (x86_fallback_frame_state): Likewise.
	* config/ia64/linux-unwind.h (ia64_fallback_frame_state)
	(ia64_handle_unwabi): Likewise.
	* config/mips/linux-unwind.h (mips_fallback_frame_state): Likewise.
	* config/pa/linux-unwind.h (pa32_fallback_frame_state): Likewise.
	* config/sh/linux-unwind.h (shmedia_fallback_frame_state)
	(sh_fallback_frame_state): Likewise.
	* config/xtensa/linux-unwind.h (xtensa_fallback_frame_state): Likewise.

2012-04-13  Michael Meissner  <meissner@linux.vnet.ibm.com>

	Backport from mainline
	2012-04-12  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/52775
	* config/rs6000/rs6000.h (TARGET_FCFID): Add TARGET_PPC_GPOPT to
	the list of options to enable the FCFID instruction.

2012-04-12  Richard Earnshaw  <rearnsha@arm.com>

	PR target/49448
	* config.gcc (arm*-*-linux*): Use an unambiguous pattern for
	detecting big-endian triplets.

2012-04-10  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR middle-end/52894
	* varasm.c (process_pending_assemble_externals): Set
	pending_assemble_externals_processed true.
	(assemble_external): Call assemble_external_real if the pending
	assemble externals have been processed.

2012-04-09  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/52717
	* config/sparc/sparc.c (sparc_file_end): Set TREE_PUBLIC explicitly on
	the DECL generated for the special GOT helper.

2012-04-06  Matt Turner  <mattst88@gmail.com>

	* doc/install.texi: Correct typo "-mno-lsc" -> "-mno-llsc".

2012-03-29  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md (avx_h<plusminus_insn>v4df3): Fix results
	crossing 128bit lane boundary.