@@ -1,3 +1,8 @@
+2012-04-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/53084
+	* gcc.c-torture/execute/pr53084.c: New test.
+
 2012-04-13  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	Backport from mainline
