@@ -1,3 +1,10 @@
+2012-04-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/53084
+	* varasm.c (compute_reloc_for_constant): Handle ADDR_EXPR
+	of MEM_REF.
+	(output_addressed_constants): Likewise.
+
 2012-04-20  Thomas Schwinge  <thomas@codesourcery.com>
 
 	struct siginfo vs. siginfo_t
